static/css/styles.css
/*
pink: fa1963
purple: 683568
green1: 48d9b8
green2: 27b492
green3: 1a8f72
green4: 106351
grey1: e7e7e7
grey2: c7c7c7
grey3: adadad
*/

@font-face {
    font-family: 'Open Sans';
    src: url('/static/css/fonts/OpenSans-Regular-webfont.eot');
    src: url('/static/css/fonts/OpenSans-Regular-webfont.eot?#iefix') format('embedded-opentype'),
         url('/static/css/fonts/OpenSans-Regular-webfont.woff') format('woff'),
         url('/static/css/fonts/OpenSans-Regular-webfont.ttf') format('truetype'),
         url('/static/css/fonts/OpenSans-Regular-webfont.svg#OpenSansRegular') format('svg');
    font-weight: normal;
    font-style: normal;
}

@font-face {
    font-family: 'Open Sans';
    src: url('/static/css/fonts/OpenSans-Italic-webfont.eot');
    src: url('/static/css/fonts/OpenSans-Italic-webfont.eot?#iefix') format('embedded-opentype'),
         url('/static/css/fonts/OpenSans-Italic-webfont.woff') format('woff'),
         url('/static/css/fonts/OpenSans-Italic-webfont.ttf') format('truetype'),
         url('/static/css/fonts/OpenSans-Italic-webfont.svg#OpenSansItalic') format('svg');
    font-weight: normal;
    font-style: italic;
}

@font-face {
    font-family: 'Open Sans';
    src: url('/static/css/fonts/OpenSans-Bold-webfont.eot');
    src: url('/static/css/fonts/OpenSans-Bold-webfont.eot?#iefix') format('embedded-opentype'),
         url('/static/css/fonts/OpenSans-Bold-webfont.woff') format('woff'),
         url('/static/css/fonts/OpenSans-Bold-webfont.ttf') format('truetype'),
         url('/static/css/fonts/OpenSans-Bold-webfont.svg#OpenSansBold') format('svg');
    font-weight: bold;
    font-style: normal;

}

@font-face {
    font-family: 'Open Sans';
    src: url('/static/css/fonts/OpenSans-BoldItalic-webfont.eot');
    src: url('/static/css/fonts/OpenSans-BoldItalic-webfont.eot?#iefix') format('embedded-opentype'),
         url('/static/css/fonts/OpenSans-BoldItalic-webfont.woff') format('woff'),
         url('/static/css/fonts/OpenSans-BoldItalic-webfont.ttf') format('truetype'),
         url('/static/css/fonts/OpenSans-BoldItalic-webfont.svg#OpenSansBoldItalic') format('svg');
    font-weight: bold;
    font-style: italic;

}

body{font-family: 'Open Sans', arial, sans-serif; font-size:14px; line-height: 20px; color:#191919;}

h1,
h2,
h3{font-family: 'Droid Serif', georgia, serif;}
h4{font-size:15px;}

a{color:#1a8f72;}
a:hover{color:#106351; background-color: #fff;}

#wrap{width:1080px;margin: 0 auto;}
#grid{display:none;width:984px;min-height:800px;background:url(/static/i/grid.png);position:absolute;top:0;left:48px;}

#header{height:110px;position:relative;}
#header .user{float:right;font-size:12px;margin-top:6px;}
#header .user span{padding-left:10px;margin-left:8px;border-left:1px solid #ccc;}
#header .user span:first-child{margin-left:0;padding-left:0;border:none;}
#header .user span:first-child a{text-transform: uppercase}
#header .kb{width:74px;height:77px;position:absolute;right:0;bottom:-10px;background:url(/static/i/kb.png) no-repeat;z-index:2;}
#header .logo{font:normal 18px/1 "Open Sans", sans-serif;position:absolute;left:0;bottom:4px; color:#aaa;text-transform:uppercase;}
#header .logo strong{display:block;font:bold 28px/1 "Droid Serif", georgia, serif;text-transform:none; color:#27b492;letter-spacing:-1px;}

#header .searchfield{position:absolute;left:384px;top:62px;z-index:2;}
#header .searchfield input{width:500px;border:1px solid #bbb; padding: 6px 10px 6px;border-color: #aaa #fff #ccc #aaa;
  box-shadow: inset 1px 1px 1px rgba(0,0,0,.2);
  -moz-box-shadow: inset 1px 1px 1px rgba(0,0,0,.2);
  -webkit-box-shadow: inset 1px 1px 1px rgba(0,0,0,.2);
  -webkit-border-top-left-radius: 3px;
  -webkit-border-bottom-left-radius: 3px;
  -moz-border-radius-topleft: 3px;
  -moz-border-radius-bottomleft: 3px;
  border-top-left-radius: 3px;
  border-bottom-left-radius: 3px;
  height:24px;
  border-right-width:0;
  -webkit-transition:all ease-out 0.05s;
}

#header .searchfield input:focus{border-color: #777 #fff #aaa #777;}

#header .searchfield input:focus::-webkit-input-placeholder { color:#ddd; }
#header .searchfield input:focus::-moz-placeholder:focus { color:#ddd; }
#header .searchfield input:focus:-ms-input-placeholder:focus { color:#ddd; }

#header .searchfield button{text-indent:-10000px;height:38px;border:none;
    background:#1a8f72 url(/static/i/search.png) no-repeat 50% 50%;width:50px;
    -webkit-border-top-right-radius: 3px;
    -webkit-border-bottom-right-radius: 3px;
    -moz-border-radius-topright: 3px;
    -moz-border-radius-bottomright: 3px;
    border-top-right-radius: 3px;
    border-bottom-right-radius: 3px;
    -webkit-transition:background ease-out 0.03s;
}

#header .searchfield button:hover{background-color:#197961;}

#header .searchfield button:hover{}  
#header .searchfield input,
#header .searchfield button{float:left;}

body.index #header .searchfield{left:220px;top:190px;}
body.index #header .searchfield input{padding:10px 16px;}
body.index #header .searchfield button{height:46px;}

body.login #header .searchfield{display:none;}

.content{position:relative;background:url(/static/i/bg.png);padding:0 36px 24px 36px;overflow:hidden;}

.content header{background:url(/static/i/top.png) no-repeat;position:relative;padding:23px 36px 0;overflow:hidden;width:1008px;margin-left:-36px;}
.content header h1{height:40px;background-repeat:no-repeat;background-position: 8px 50%;
    color:#106351;text-transform:uppercase;padding-left:48px;margin:0 0 12px 9px;font:bold 14px/40px "Open Sans", sans-serif;}

.content.index header{background-image:url(/static/i/top-index.png);margin-bottom:130px;}
.content.index > .cols{margin-left:12px;overflow:visible;}

body.login .content.index header{margin-bottom:60px;}

.content header .levels{float:left;}
.content header .levels span{float:left;padding: 5px 12px 6px;color:#444;}

.content header .modes{float:right;margin-top:5px;}
/* ... */

